--- a/index.html
+++ b/index.html
@@ -1,25 +1,27 @@
 <html>
-  <head><title>Vantibyte</title>
-  <style>
-    body, html {
-      height: 100%;
-      background-color: #555;
-    }
-    .center {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      text-align: center;
-      color: white;
-      font-size: 30px;
-      font-family: "Courier New", Courier, monospace;
-    }
-  </style>
-  </head>
-  <body>
-    <div class="center">
-      Vantibyte
-    </div>
-  </body>
+    <head>
+        <title>Vantibyte</title>
+        <link rel="stylesheet" type="text/css" href="https://vantibyte.com/" />
+        <style>
+            body, html {
+                height: 100%;
+                background-color: #555;
+            }
+            .center {
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                text-align: center;
+                color: white;
+                font-size: 30px;
+                font-family: "Courier New", Courier, monospace;
+            }
+        </style>
+    </head>
+    <body>
+        <div class="center">
+            Vantibyte
+        </div>
+    </body>
 </html>
