Use the right reset

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Vantibyte</title>
-        <link rel="stylesheet" type="text/css" href="https://vantibyte.com/" />
+        <link rel="stylesheet" type="text/css" href="https://meyerweb.com/eric/tools/css/reset/reset.css" />
         <style>
             body, html {
                 height: 100%;
