--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
 <html>
     <head>
+        <meta charset="utf-8">
         <title>Vantibyte</title>
-        <link rel="stylesheet" type="text/css" href="https://meyerweb.com/eric/tools/css/reset/reset.css" />
+        <meta name="robots" content="index, follow">
+        <meta name="author" content="Vantibyte">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta property="og:title" content="Vantibyte">
+        <meta property="og:site_name" content="Vantibyte">
+        <meta property="og:url" content="https://vantibyte.com">
+        <link rel="stylesheet" type="text/css" href="//reset.css" />
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
         <style>
             body, html {
                 height: 100%;
