--- a/index.html
+++ b/index.html
@@ -22,14 +22,23 @@
                 transform: translate(-50%, -50%);
                 text-align: center;
                 color: white;
-                font-size: 30px;
-                font-family: "Courier New", Courier, monospace;
+                font-size: 1em;
+                font-family: 'Open Sans', sans-serif;
+            }
+            img {
+                margin-bottom: 2em;
+            }
+            a {
+                text-decoration: none;
+                color: #009ade;
             }
         </style>
     </head>
     <body>
         <div class="center">
-            Vantibyte
+            <img src="//vblwide.png" alt="Vantibyte Logo"><br/>
+            <p><p>We're Vantibyte, we make tools for streamers and organisations alike.<br/>
+            There's not much here yet, but you can check out our <a href="/docs">Documentation</a> or come chat to us on <a href="https://discord.gg/VhrGQx9">Discord</a></p>
         </div>
     </body>
 </html>
