--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="robots" content="index, follow">
         <meta name="author" content="Vantibyte">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="theme-color" content="#0055b8">
         <meta property="og:title" content="Vantibyte">
         <meta property="og:site_name" content="Vantibyte">
         <meta property="og:url" content="https://vantibyte.com">
