Remove extraneous slashes..

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta property="og:title" content="Vantibyte">
         <meta property="og:site_name" content="Vantibyte">
         <meta property="og:url" content="https://vantibyte.com">
-        <link rel="stylesheet" type="text/css" href="//reset.css" />
+        <link rel="stylesheet" type="text/css" href="/reset.css" />
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
         <style>
             body, html {
@@ -37,7 +37,7 @@
     </head>
     <body>
         <div class="center">
-            <img src="//vblwide.png" alt="Vantibyte Logo"><br/>
+            <img src="/vblwide.png" alt="Vantibyte Logo"><br/>
             <p><p>We're Vantibyte, we make tools for streamers and organisations alike.<br/>
             There's not much here yet, but you can check out our <a href="/docs">Documentation</a> or come chat to us on <a href="https://discord.gg/VhrGQx9">Discord</a></p>
         </div>
