--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 position: absolute;
                 top: 50%;
                 left: 50%;
+                max-width: 95%;
                 transform: translate(-50%, -50%);
                 text-align: center;
                 color: white;
@@ -28,6 +29,7 @@
             }
             img {
                 margin-bottom: 2em;
+                max-width: 100%;
             }
             a {
                 text-decoration: none;
