Update discord invite

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="center">
             <img src="/vblwide.png" alt="Vantibyte Logo"><br/>
             <p><p>We're Vantibyte, we make tools for streamers and organisations alike.<br/>
-            There's not much here yet, but you can check out our <a href="/docs">Documentation</a> or come chat to us on <a href="https://discord.gg/VhrGQx9">Discord</a></p>
+            There's not much here yet, but you can check out our <a href="/docs">Documentation</a> or come chat to us on <a href="https://discord.gg/BBRsR84">Discord</a></p>
         </div>
     </body>
 </html>
