--- a/index.html
+++ b/index.html
@@ -1,47 +1,36 @@
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title>Vantibyte</title>
-        <meta name="robots" content="index, follow">
-        <meta name="author" content="Vantibyte">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="theme-color" content="#0055b8">
-        <meta property="og:title" content="Vantibyte">
-        <meta property="og:site_name" content="Vantibyte">
-        <meta property="og:url" content="https://vantibyte.com">
-        <link rel="stylesheet" type="text/css" href="/reset.css" />
-        <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
-        <style>
-            body, html {
-                height: 100%;
-                background-color: #555;
-            }
-            .center {
-                position: absolute;
-                top: 50%;
-                left: 50%;
-                max-width: 95%;
-                transform: translate(-50%, -50%);
-                text-align: center;
-                color: white;
-                font-size: 1em;
-                font-family: 'Open Sans', sans-serif;
-            }
-            img {
-                margin-bottom: 2em;
-                max-width: 100%;
-            }
-            a {
-                text-decoration: none;
-                color: #009ade;
-            }
-        </style>
-    </head>
-    <body>
-        <div class="center">
-            <img src="/vblwide.png" alt="Vantibyte Logo"><br/>
-            <p><p>We're Vantibyte, we make tools for streamers and organisations alike.<br/>
-            There's not much here yet, but you can check out our <a href="/docs">Documentation</a> or come chat to us on <a href="https://discord.gg/BBRsR84">Discord</a></p>
-        </div>
-    </body>
-</html>
+---
+title: Home
+---
+
+<section class="hero diagonal">
+	<div class="container">
+		<h2>Modern broadcasting Tools</h2>
+		<p class="subtext"><strong>Vantibyte</strong> provides modern tools for the modern broadcaster. Our solutions allow small broadcast teams to make output that can sit
+		side by side with TV broadcasting.</p>
+	</div>
+</section>
+
+<section class="diagonal patterned">
+	<div class="container">
+		<div>
+			<h3>Using our tools</h3>
+			<p>While we scale up our tooling, we're currently working on an invite-only basis. <a href="{{ site.baseurl }}/contact/">Contact us</a> to find out more and get started.</p>
+			<p><a class="button alt" href="{{ site.baseurl }}/contact/">Contact Us</a></p>
+		</div>
+	</div>
+</section>
+
+<section class="diagonal alternate">
+	<div class="container halves">
+		<div>
+			<ul class="image-list">
+				<li><img src="{{ site.baseurl }}/images/twitch-phone.jpg" width="426"></li>
+				<li><img src="{{ site.baseurl }}/images/studio-mic.jpg" width="426" style="margin-bottom: 40px;"></li>
+			</ul>
+		</div>
+		<div>
+			<h3>Our toolset</h3>
+			<p>Each of our tools has been built from the ground up for their purpose. From our RTMP Solution to our esports overlays; see what <a href="{{ site.baseurl }}/products">tools we offer.</a></p>
+		</div>
+	</div>
+</section>
