Add better descriptions

--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 title: About
 heading: About us
 subtitle: Find out more about Vantibyte, and the expert team behind it
-staff: false
+description: Find out more about Vantibyte, and the expert team behind it
 ---
 
 <section class="diagonal patterned">
