--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,7 @@
 title: Contact
 heading: Reach out to us today
 subtitle: Got questions or want to get started?
+description: Contact the Vantibyte team
 ---
 
 <section class="diagonal patterned">
