--- a/products.html
+++ b/products.html
@@ -1,7 +1,8 @@
 ---
 title: Products
 heading: Our Tools
-subtitle: See the tools we provide to our customers.
+subtitle: See the tools we provide to our customers
+description: See the tools we provide to our customers
 ---
 
 <section class="diagonal patterned">
