Remove some redundant code

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@ title: Home
 	<div class="container">
 		<div>
 			<h3>Using our tools</h3>
-			<p>While we scale up our tooling, we're currently working on an invite-only basis. <a href="{{ site.baseurl }}/contact/">Contact us</a> to find out more and get started.</p>
-			<p><a class="button alt" href="{{ site.baseurl }}/contact/">Contact Us</a></p>
+			<p>While we scale up our tooling, we're currently working on an invite-only basis. <a href="/contact/">Contact us</a> to find out more and get started.</p>
+			<p><a class="button alt" href="/contact/">Contact Us</a></p>
 		</div>
 	</div>
 </section>
@@ -24,13 +24,13 @@ title: Home
 	<div class="container halves">
 		<div>
 			<ul class="image-list">
-				<li><img src="{{ site.baseurl }}/images/twitch-phone.jpg" width="426"></li>
-				<li><img src="{{ site.baseurl }}/images/studio-mic.jpg" width="426" style="margin-bottom: 40px;"></li>
+				<li><img src="/images/twitch-phone.jpg" width="426"></li>
+				<li><img src="/images/studio-mic.jpg" width="426"></li>
 			</ul>
 		</div>
 		<div>
 			<h3>Our toolset</h3>
-			<p>Each of our tools has been built from the ground up for their purpose. From our RTMP Solution to our esports overlays; see what <a href="{{ site.baseurl }}/products">tools we offer.</a></p>
+			<p>Each of our tools has been built from the ground up for their purpose. From our RTMP Solution to our esports overlays; see what <a href="/products">tools we offer.</a></p>
 		</div>
 	</div>
 </section>
