Update discord links to use shortlink

--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@ description: Contact the Vantibyte team
 		</div>
 		<div>
 			<h3>Discord</h3>
-			<p><a href="https://discord.gg/BBRsR84">Join us!</a></p>
+			<p><a href="https://vntbyt.link/discord">Join us!</a></p>
 		</div>
 	</div>
 </section>
